--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@
     <li><a href="3.html">대왕판다</a></li>
     <li><a href="4.html">HTML</a></li>
   </ol>
-  <h2><a href="https://www.instagram.com/sangchu._.r0k/" target="_blank" title="송상록 인스타그램 '배추록'">송상록이란 무엇인가?</a></h2>
+  <h2><a href="https://www.instagram.com/sangchu._.r0k/" target="_blank" title="송상록 인스타그램 '상추록'">송상록이란 무엇인가?</a></h2>
   <p>상록이는 사실 이 험난한 세상 속 <strong>떠오르는 <u>영웅</u></strong>, 즉 히어로라고 말할 수 있다. 화를 절대로 내지 않고, 천사답게 술을 마셔도 이슬로 소화시키는 그의 독보적인 영웅력은 기이하다고 말할 수 밖에 없다.</p><p>하지만 상록이가 영웅이라는 사실은 <strong>비밀</strong>이기 때문에 함부로 말해서는 안 된다. 물론 천사는 삐지지 않는다는 점을 이용해서 함부로 이를 누출하는 사례도 몇 번 발생하긴 했다. 하지만 뭐 어쩔 수 없다. 히어로를 좋아하는 상록이답게 야구 팀도 <strong><a href="http://www.heroesbaseball.co.kr/" target="_blank" title="키움 히어로즈 홈페이지">키움 히어로즈</a></strong>를 상당히 좋아하는 것으로 추정된다.</p>
   <h3>이렇게 <strong><u>주옥</u></strong>같은 말을 하는 상록이가 대단하지 아니한가.</h2>
   <img src="evergreen.jpg" width="30%">
