--- a/2.html
+++ b/2.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - 송상록의 음식취향</title>
+  <title>송상록의 음식취향</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157829403-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157829403-1');
+  </script>
 </head>
 
 <body>
@@ -27,8 +36,8 @@
         <td>맛있음</td>
       </tr>
       <tr>
-        <td>짱구라면</td>
-        <td>500원</td>
+        <td>민트초코</td>
+        <td>-349,3493원</td>
         <td>맛없음</td>
       </tr>
       <tr>
@@ -37,6 +46,6 @@
         <td>어중간</td>
       </tr>
     </table>
-
+    <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/LM-2rWUOhDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 </body>
 </html>
