--- a/3.html
+++ b/3.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - 대왕판다</title>
+  <title>대왕판다</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157829403-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157829403-1');
+  </script>
 </head>
 <body>
   <h1><a href="index.html">송상록</a></h1>
@@ -14,7 +23,7 @@
   </ol>
   <h2>대왕판다</h2>
   <h3>귀여워....</h3>
-  <p>너무 귀여워요 판다ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ판다처럼 게으르게 살고싶어요... 다만 상록이가 제일 좋아하는 동물은 대왕판다는 아니다. 꿀벌을 제일 좋아한다. 입는 옷도 다 꿀벌 같으니 뭐 이걸 어찌하리.</p>
+  <p>너무 귀여워요 판다ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ판다처럼 게으르게 살고싶어요... 다만 상록이가 제일 좋아하는 동물은 대왕판다는 아니다. 꿀벌을 제일 좋아한다. 입는 옷도 다 꿀벌 같다.</p>
   <strong>귀여운 판다 동영상을 보고 싶으시면, 아래 사진을 눌러 주세요!</strong><br>
   <a href="https://www.youtube.com/watch?v=unKI78hW6LI" title="귀여운 판다 동영상 보러가기" target="_blank"><img src="panda.jpg" width="30%"></a>
 </body>
