--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157829403-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157829403-1');
+  </script>
 </head>
 
 <body>
@@ -13,10 +22,40 @@
     <li><a href="3.html">대왕판다</a></li>
     <li><a href="4.html">HTML</a></li>
   </ol>
+
   <h2>상록수(Evergreen Tree)</h2>
   <img src="300px-448_Sangnoksu_Sign.jpg" width=30%>
-  <p>낙엽수와 달리, 계절에 상관없이 늘 잎이 푸른 것을 의미한다. 간혹가다 오해하는 도시촌놈사람들도 있는데, 낙엽이 안생기는게 아니라 상시 수명이 다한 잎을 떨구고 새로운 잎을 만들어내는 거다. 그리고 상록수도 계절에 따라 잎사귀를 한꺼번에 많이 털갈이 하는 종들이 있다.</p>
+  <p>낙엽수와 달리, 계절에 상관없이 늘 잎이 푸른 것을 의미한다. 간혹가다 오해하는 도시 사람들도 있는데, 낙엽이 안생기는게 아니라 상시 수명이 다한 잎을 떨구고 새로운 잎을 만들어내는 거다. 그리고 상록수도 계절에 따라 잎사귀를 한꺼번에 많이 털갈이 하는 종들이 있다.</p>
   <p>보통 잎이 좁은 상록침엽수와 잎이 넓은 상록활엽수로 나뉘는데 북쪽지방으로 갈수록 상록침엽수가 많고, 남쪽지방으로 갈수록 상록활엽수가 많다.</p>
   <p>상록수는 겨울이 되면 나뭇잎을 이루는 세포 속에 들어 있는 액체의 농도가 진해진다. 그래서 기온이 내려가도 뿌리에서 물을 잘 빨아들이고 나뭇잎이 잘 얼지도 않는다.</p>
+
+  <h2>방명록 - 익명 보장</h2>
+  <div id="lv-container" data-id="city" data-uid="MTAyMC80ODUwNy8yNTAwMQ==">
+    <script type="text/javascript">
+     (function(d, s) {
+         var j, e = d.getElementsByTagName(s)[0];
+
+         if (typeof LivereTower === 'function') { return; }
+
+         j = d.createElement(s);
+         j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+         j.async = true;
+
+         e.parentNode.insertBefore(j, e);
+     })(document, 'script');
+    </script>
+  <noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+  </div>
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5e3a9a3fa89cda5a188440f6/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
 </body>
 </html>
