--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <p>보통 잎이 좁은 상록침엽수와 잎이 넓은 상록활엽수로 나뉘는데 북쪽지방으로 갈수록 상록침엽수가 많고, 남쪽지방으로 갈수록 상록활엽수가 많다.</p>
   <p>상록수는 겨울이 되면 나뭇잎을 이루는 세포 속에 들어 있는 액체의 농도가 진해진다. 그래서 기온이 내려가도 뿌리에서 물을 잘 빨아들이고 나뭇잎이 잘 얼지도 않는다.</p>
 
-  <h3>오른쪽 아래의 초록색 버튼을 누르시면 채팅이 가능합니다</
-  <h3>방명록 - 익명 보장</h2>
+  <h3>오른쪽 아래의 초록색 버튼을 누르시면 채팅이 가능합니다</h3>
+  <h3>방명록 - 익명 보장</h3>
   <div id="lv-container" data-id="city" data-uid="MTAyMC80ODUwNy8yNTAwMQ==">
     <script type="text/javascript">
      (function(d, s) {
