--- a/2.html
+++ b/2.html
@@ -3,24 +3,33 @@
 <head>
   <title>송상록의 음식취향</title>
   <meta charset="utf-8">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157829403-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-157829403-1');
-  </script>
+  <style>
+    #active {
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .saw {
+      color: blue;
+    }
+    a {
+      color: blue;
+      text-decoration: underline;
+    }
+    h1 {
+      font-size: 45px;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
-  <h1><a href="index.html">송상록</a></h1>
+  <h1>송상록 실습용 웹페이지</h1>
   <ol>
-    <li><a href="1.html">송상록이란 무엇인가?</a></li>
-    <li><a href="2.html">송상록의 음식취향</a></li>
-    <li><a href="3.html">대왕판다</a></li>
-    <li><a href="4.html">HTML</a></li>
+    <li><a href="index.html" class='saw'>메인 페이지</a></li>
+    <li><a href="1.html" class='saw'>송상록이란 무엇인가?</a></li>
+    <li><a href="2.html" class='saw' id='active'>송상록의 음식취향</a></li>
+    <li><a href="3.html" class='saw'>대왕판다</a></li>
+    <li><a href="4.html" class='saw'>HTML</a></li>
   </ol>
 
   <h2>송상록의 음식취향</h2>
