--- a/3.html
+++ b/3.html
@@ -3,28 +3,41 @@
 <head>
   <title>대왕판다</title>
   <meta charset="utf-8">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157829403-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-157829403-1');
-  </script>
+  <style>
+    #active {
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .saw {
+    color: blue;
+    }
+    a {
+      color: blue;
+      text-decoration: underline;
+    }
+    h1 {
+      font-size: 45px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <h1><a href="index.html">송상록</a></h1>
+  <h1>송상록 실습용 웹페이지</h1>
   <ol>
-    <li><a href="1.html">송상록이란 무엇인가?</a></li>
-    <li><a href="2.html">송상록의 음식취향</a></li>
-    <li><a href="3.html">대왕판다</a></li>
-    <li><a href="4.html">HTML</a></li>
+    <li><a href="index.html" class="saw">메인 페이지</a></li>
+    <li><a href="1.html" class="saw">송상록이란 무엇인가?</a></li>
+    <li><a href="2.html" class="saw">송상록의 음식취향</a></li>
+    <li><a href="3.html" class="saw" id="active">대왕판다</a></li>
+    <li><a href="4.html" class="saw">HTML</a></li>
   </ol>
   <h2>대왕판다</h2>
   <h3>귀여워....</h3>
-  <p>너무 귀여워요 판다ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ판다처럼 게으르게 살고싶어요... 다만 상록이가 제일 좋아하는 동물은 대왕판다는 아니다. 꿀벌을 제일 좋아한다. 입는 옷도 다 꿀벌 같다.</p>
-  <strong>귀여운 판다 동영상을 보고 싶으시면, 아래 사진을 눌러 주세요!</strong><br>
+  <p>
+    너무 귀여워요 판다ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ판다처럼 게으르게 살고싶어요... 다만 상록이가 제일 좋아하는 동물은 대왕판다는 아니다. 꿀벌을 제일 좋아한다. 입는 옷도 다 꿀벌 같다.
+  </p>
+  <p>
+    <strong>귀여운 판다 동영상을 보고 싶으시면, 아래 사진을 눌러 주세요!</strong>
+  </p>
   <a href="https://www.youtube.com/watch?v=unKI78hW6LI" title="귀여운 판다 동영상 보러가기" target="_blank"><img src="panda.jpg" width="30%"></a>
 </body>
 </html>
