--- a/4.html
+++ b/4.html
@@ -3,26 +3,37 @@
 <head>
   <title>HTML</title>
   <meta charset="utf-8">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157829403-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-157829403-1');
-  </script>
+  <style>
+    #active {
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .saw {
+      color: blue;
+    }
+    a {
+      color: blue;
+      text-decoration: underline;
+    }
+    h1 {
+      font-size: 45px;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
-  <h1><a href="index.html">송상록</a></h1>
+  <h1>송상록 실습용 웹페이지</h1>
   <ol>
-    <li><a href="1.html">송상록이란 무엇인가?</a></li>
-    <li><a href="2.html">송상록의 음식취향</a></li>
-    <li><a href="3.html">대왕판다</a></li>
-    <li><a href="4.html">HTML</a></li>
+    <li><a href="index.html" class="saw">메인 페이지</a></li>
+    <li><a href="1.html" class="saw">송상록이란 무엇인가?</a></li>
+    <li><a href="2.html" class="saw">송상록의 음식취향</a></li>
+    <li><a href="3.html" class="saw">대왕판다</a></li>
+    <li><a href="4.html" class="saw" id="active">HTML</a></li>
   </ol>
   <h2>HTML</h2>
-  <p>Hypertext Markup Language (HTML) is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p><p>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
+  <p>
+    Hypertext Markup Language (HTML) is the standard markup language for <strong>creating web pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p><p>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+    </p>
 </body>
 </html>
