font change, compressed panda picture

--- a/1.html
+++ b/1.html
@@ -4,6 +4,14 @@
   <title>송상록이란 무엇인가?</title>
   <meta charset="utf-8">
   <style>
+    @font-face {
+      font-family: 'Arita-dotum-Medium';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff');
+      font-weight: normal;
+      font-style: normal; }
+    body {
+      font-family: "Arita-dotum-Medium"
+    }
     #active {
       font-weight: bold;
       text-decoration: none;
@@ -47,5 +55,6 @@
     상록이는 사실 이 험난한 세상 속 <strong>떠오르는 영웅</strong>, 즉 히어로라고 말할 수 있다. 화를 절대로 내지 않고, 천사답게 술을 마셔도 이슬로 소화시키는 그의 독보적인 영웅력은 기이하다고 말할 수 밖에 없다.</p><p>하지만 상록이가 영웅이라는 사실은 <strong>비밀</strong>이기 때문에 함부로 말해서는 안 된다. 물론 천사는 삐지지 않는다는 점을 이용해서 함부로 이를 누출하는 사례도 몇 번 발생하긴 했다. 하지만 뭐 어쩔 수 없다. 히어로를 좋아하는 상록이답게 야구 팀도 <strong><a href="http://www.heroesbaseball.co.kr/" target="_blank" title="키움 히어로즈 홈페이지">키움 히어로즈</a></strong>를 상당히 좋아하는 것으로 추정된다.
     </p>
   <h3>이렇게 <strong>주옥</strong>같은 말을 하는 상록이가 대단하지 아니한가.<br>더 자세히 알고 싶다면 <a href="https://www.instagram.com/baechu._.r0k/" target="_blank" title="송상록 인스타그램 '상추록'">상록이의 인스타그램</a>으로 놀러오세요!</h3>
+<p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
 </body>
 </html>
