--- a/3.html
+++ b/3.html
@@ -4,6 +4,14 @@
   <title>대왕판다</title>
   <meta charset="utf-8">
   <style>
+    @font-face {
+      font-family: 'Arita-dotum-Medium';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff');
+      font-weight: normal;
+      font-style: normal; }
+    body {
+      font-family: "Arita-dotum-Medium"
+    }
     #active {
       font-weight: bold;
       text-decoration: none;
@@ -39,5 +47,6 @@
     <strong>귀여운 판다 동영상을 보고 싶으시면, 아래 사진을 눌러 주세요!</strong>
   </p>
   <a href="https://www.youtube.com/watch?v=unKI78hW6LI" title="귀여운 판다 동영상 보러가기" target="_blank"><img src="panda.jpg" width="30%"></a>
+  <p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
 </body>
 </html>
