--- a/2.html
+++ b/2.html
@@ -4,6 +4,14 @@
   <title>송상록의 음식취향</title>
   <meta charset="utf-8">
   <style>
+    @font-face {
+      font-family: 'Arita-dotum-Medium';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff');
+      font-weight: normal;
+      font-style: normal; }
+    body {
+      font-family: "Arita-dotum-Medium"
+    }
     #active {
       font-weight: bold;
       text-decoration: none;
@@ -56,5 +64,6 @@
       </tr>
     </table>
     <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/LM-2rWUOhDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+<p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
 </body>
 </html>
