--- a/1.html
+++ b/1.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <title>송상록이란 무엇인가?</title>
   <meta charset="utf-8">
@@ -8,53 +9,65 @@
       font-family: 'Arita-dotum-Medium';
       src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff');
       font-weight: normal;
-      font-style: normal; }
+      font-style: normal;
+    }
+
     body {
-      font-family: "Arita-dotum-Medium"
+      font-family: "Arita-dotum-Medium";
+      margin: 0;
     }
-    #active {
-      font-weight: bold;
-      text-decoration: none;
+
+    #grid {
+      display: grid;
+      grid-template-columns: 195px 1fr;
     }
-    .saw {
-      color: blue;
+
+    #grid ol {
+      border-right: 2px solid gray;
+      width: 150px;
+      margin: 0px;
+      padding: 15px;
+      padding-left: 30px;
     }
+
+    #grid #article {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+
     a {
       color: blue;
       text-decoration: underline;
     }
+
     h1 {
       font-size: 45px;
       text-align: center;
+      border-bottom: 2px solid gray;
+      margin: 0;
+      padding: 15px;
     }
   </style>
 </head>
 
 <body>
   <h1>송상록 실습용 웹페이지</h1>
+  <div id="grid">
   <ol>
-    <li><a href="index.html" class='saw' >메인 페이지</a></li>
-    <li><a href="1.html"  class='saw' id='active'>송상록이란 무엇인가?</a></li>
-    <li><a href="2.html" class='saw' >송상록의 음식취향</a></li>
-    <li><a href="3.html" class='saw' >대왕판다</a></li>
-    <li><a href="4.html" class='saw' >HTML</a></li>
+    <li><a href="index.html">메인 페이지</a></li>
+    <li><a href="1.html">송상록이란 무엇인가?</a></li>
+    <li><a href="2.html">송상록의 음식취향</a></li>
+    <li><a href="3.html">대왕판다</a></li>
+    <li><a href="4.html">HTML</a></li>
   </ol>
-
-  <!--
-  <h1><a href="index.html"><font color="red">송상록</font></a></h1>
-  <ol>
-    <li><a href="1.html"><font color="red">송상록이란 무엇인가?</font></a></li>
-    <li><a href="2.html"><font color="red">송상록의 음식취향</font></a></li>
-    <li><a href="3.html"><font color="red">대왕판다</font></a></li>
-    <li><a href="4.html"><font color="red">HTML</font></a></li>
-  </ol>
-  -->
-
+  <div id="article">
   <h2>송상록이란 무엇인가?</h2>
   <p>
     상록이는 사실 이 험난한 세상 속 <strong>떠오르는 영웅</strong>, 즉 히어로라고 말할 수 있다. 화를 절대로 내지 않고, 천사답게 술을 마셔도 이슬로 소화시키는 그의 독보적인 영웅력은 기이하다고 말할 수 밖에 없다.</p><p>하지만 상록이가 영웅이라는 사실은 <strong>비밀</strong>이기 때문에 함부로 말해서는 안 된다. 물론 천사는 삐지지 않는다는 점을 이용해서 함부로 이를 누출하는 사례도 몇 번 발생하긴 했다. 하지만 뭐 어쩔 수 없다. 히어로를 좋아하는 상록이답게 야구 팀도 <strong><a href="http://www.heroesbaseball.co.kr/" target="_blank" title="키움 히어로즈 홈페이지">키움 히어로즈</a></strong>를 상당히 좋아하는 것으로 추정된다.
     </p>
   <h3>이렇게 <strong>주옥</strong>같은 말을 하는 상록이가 대단하지 아니한가.<br>더 자세히 알고 싶다면 <a href="https://www.instagram.com/baechu._.r0k/" target="_blank" title="송상록 인스타그램 '상추록'">상록이의 인스타그램</a>으로 놀러오세요!</h3>
+  </div>
+  </div>
 <p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
 </body>
 </html>
