--- a/2.html
+++ b/2.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <title>송상록의 음식취향</title>
   <meta charset="utf-8">
@@ -16,16 +17,19 @@
       margin: 0;
     }
 
+    ol {
+      border-right: 2px solid gray;
+      width: 150px;
+      margin: 0px;
+      padding: 15px;
+    }
+
     #grid {
       display: grid;
       grid-template-columns: 195px 1fr;
     }
 
     #grid ol {
-      border-right: 2px solid gray;
-      width: 150px;
-      margin: 0px;
-      padding: 15px;
       padding-left: 30px;
     }
 
@@ -45,6 +49,16 @@
       border-bottom: 2px solid gray;
       margin: 0;
       padding: 15px;
+    }
+
+    @media(max-width:600px) {
+      #grid {
+        display: block;
+      }
+
+      ol {
+        border-right: none;
+      }
     }
   </style>
 </head>
