--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
       font-family: 'Arita-dotum-Medium';
       src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff');
       font-weight: normal;
-      font-style: normal; }
+      font-style: normal; 
+      }
     body {
       font-family: "Arita-dotum-Medium";
       margin: 0;
       }
+    ol {
+      border-right: 2px solid gray;
+      width: 150px;
+      margin: 0px;
+      padding: 15px;
+    }
     #grid {
       display: grid;
       grid-template-columns: 195px 1fr;
     }
     #grid ol {
-      border-right: 2px solid gray;
-      width: 150px;
-      margin: 0px;
-      padding: 15px;
       padding-left: 30px;
     }
     #grid #article {
@@ -38,6 +41,14 @@
       border-bottom: 2px solid gray;
       margin: 0;
       padding: 15px;
+    }
+    @media(max-width:600px){
+      #grid{
+        display: block;
+      }
+      ol{
+        border-right: none;
+      }
     }
   </style>
 </head>
