--- a/1.html
+++ b/1.html
@@ -51,7 +51,7 @@
       padding: 15px;
     }
 
-    @media(max-width:600px) {
+    @media(max-width:768px) {
       #grid {
         display: block;
       }
@@ -68,13 +68,13 @@
   <div id="grid">
   <ol>
     <li><a href="index.html">메인 페이지</a></li>
-    <li><a href="1.html">송상록이란 무엇인가?</a></li>
+    <li><a href="1.html">송상록개론</a></li>
     <li><a href="2.html">송상록의 음식취향</a></li>
     <li><a href="3.html">대왕판다</a></li>
     <li><a href="4.html">HTML</a></li>
   </ol>
   <div id="article">
-  <h2>송상록이란 무엇인가?</h2>
+  <h2>송상록개론</h2>
   <p>
     상록이는 사실 이 험난한 세상 속 <strong>떠오르는 영웅</strong>, 즉 히어로라고 말할 수 있다. 화를 절대로 내지 않고, 천사답게 술을 마셔도 이슬로 소화시키는 그의 독보적인 영웅력은 기이하다고 말할 수 밖에 없다.</p><p>하지만 상록이가 영웅이라는 사실은 <strong>비밀</strong>이기 때문에 함부로 말해서는 안 된다. 물론 천사는 삐지지 않는다는 점을 이용해서 함부로 이를 누출하는 사례도 몇 번 발생하긴 했다. 하지만 뭐 어쩔 수 없다. 히어로를 좋아하는 상록이답게 야구 팀도 <strong><a href="http://www.heroesbaseball.co.kr/" target="_blank" title="키움 히어로즈 홈페이지">키움 히어로즈</a></strong>를 상당히 좋아하는 것으로 추정된다.
     </p>
