--- a/2.html
+++ b/2.html
@@ -51,7 +51,7 @@
       padding: 15px;
     }
 
-    @media(max-width:600px) {
+    @media(max-width:768px) {
       #grid {
         display: block;
       }
@@ -68,7 +68,7 @@
   <div id='grid'>
   <ol>
     <li><a href="index.html">메인 페이지</a></li>
-    <li><a href="1.html">송상록이란 무엇인가?</a></li>
+    <li><a href="1.html">송상록개론</a></li>
     <li><a href="2.html">송상록의 음식취향</a></li>
     <li><a href="3.html">대왕판다</a></li>
     <li><a href="4.html">HTML</a></li>
