--- a/4.html
+++ b/4.html
@@ -11,38 +11,31 @@
       font-weight: normal;
       font-style: normal;
     }
-
     body {
       font-family: "Arita-dotum-Medium";
       margin: 0;
     }
-
     ol {
       border-right: 2px solid gray;
       width: 150px;
       margin: 0px;
       padding: 15px;
     }
-
     #grid {
       display: grid;
       grid-template-columns: 195px 1fr;
     }
-
     #grid ol {
       padding-left: 30px;
     }
-
     #grid #article {
       padding-left: 15px;
       padding-right: 15px;
     }
-
     a {
       color: blue;
       text-decoration: underline;
     }
-
     h1 {
       font-size: 45px;
       text-align: center;
@@ -50,12 +43,10 @@
       margin: 0;
       padding: 15px;
     }
-
-    @media(max-width:600px) {
+    @media(max-width:768px) {
       #grid {
         display: block;
       }
-
       ol {
         border-right: none;
       }
@@ -68,7 +59,7 @@
   <div id="grid">
   <ol>
     <li><a href="index.html">메인 페이지</a></li>
-    <li><a href="1.html">송상록이란 무엇인가?</a></li>
+    <li><a href="1.html">송상록개론</a></li>
     <li><a href="2.html">송상록의 음식취향</a></li>
     <li><a href="3.html">대왕판다</a></li>
     <li><a href="4.html">HTML</a></li>
