viewport 적용 이번엔 제발 rwd 되길바람.

--- a/1.html
+++ b/1.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>송상록이란 무엇인가?</title>
-  <meta charset="utf-8">
+  <title>송상록개론</title>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @font-face {
       font-family: 'Arita-dotum-Medium';
@@ -64,7 +64,7 @@
 </head>
 
 <body>
-  <h1>송상록 실습용 웹페이지</h1>
+  <h1>송상록 실습공장</h1>
   <div id="grid">
   <ol>
     <li><a href="index.html">메인 페이지</a></li>
