--- a/2.html
+++ b/2.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>송상록의 음식취향</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @font-face {
       font-family: 'Arita-dotum-Medium';
@@ -64,7 +64,7 @@
 </head>
 
 <body>
-  <h1>송상록 실습용 웹페이지</h1>
+  <h1>송상록 실습공장</h1>
   <div id='grid'>
   <ol>
     <li><a href="index.html">메인 페이지</a></li>
