--- a/3.html
+++ b/3.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>대왕판다</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     @font-face {
       font-family: 'Arita-dotum-Medium';
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>송상록 실습용 웹페이지</h1>
+  <h1>송상록 실습공장</h1>
   <div id='grid'>
   <ol>
     <li><a href="index.html">메인 페이지</a></li>
