--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>송상록 실습용 웹페이지</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     @font-face {
       font-family: 'Arita-dotum-Medium';
@@ -43,7 +44,7 @@
       margin: 0;
       padding: 15px;
     }
-    @media(max-width:768px){
+    @media screen and (max-width:768px) {
       #grid{
         display: block;
       }
@@ -55,7 +56,7 @@
 </head>
 
 <body>
-  <h1>송상록 실습용 웹페이지</h1>
+  <h1>송상록 실습공장</h1>
   <div id="grid">
     <ol>
       <li><a href="index.html">메인 페이지</a></li>
