--- a/1.html
+++ b/1.html
@@ -4,67 +4,11 @@
 <head>
   <title>송상록개론</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    @font-face {
-      font-family: 'Arita-dotum-Medium';
-      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff');
-      font-weight: normal;
-      font-style: normal;
-    }
-
-    body {
-      font-family: "Arita-dotum-Medium";
-      margin: 0;
-    }
-
-    ol {
-      border-right: 2px solid gray;
-      width: 150px;
-      margin: 0px;
-      padding: 15px;
-    }
-
-    #grid {
-      display: grid;
-      grid-template-columns: 195px 1fr;
-    }
-
-    #grid ol {
-      padding-left: 30px;
-    }
-
-    #grid #article {
-      padding-left: 15px;
-      padding-right: 15px;
-    }
-
-    a {
-      color: blue;
-      text-decoration: underline;
-    }
-
-    h1 {
-      font-size: 45px;
-      text-align: center;
-      border-bottom: 2px solid gray;
-      margin: 0;
-      padding: 15px;
-    }
-
-    @media(max-width:768px) {
-      #grid {
-        display: block;
-      }
-
-      ol {
-        border-right: none;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>송상록 실습공장</h1>
+  <h1>데자와 공장</h1>
   <div id="grid">
   <ol>
     <li><a href="index.html">메인 페이지</a></li>
