--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <title>데자와 공장</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
   <h1>데자와 공장</h1>
   <div id="grid">
+  <div id="left">
+    <br>
+    <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);" style="width:150px;"><br>
     <ol>
       <li><a href="index.html">메인 페이지</a></li>
       <li><a href="1.html">송상록개론</a></li>
@@ -17,6 +21,7 @@
       <li><a href="3.html">대왕판다</a></li>
       <li><a href="4.html">HTML</a></li>
     </ol>
+  </div>
     <div id="article">
       <p><strong>오른쪽 아래의 초록색 버튼을 누르시면 채팅이 가능합니다</strong></p>
       <h2>상록수(Evergreen Tree)</h2>
