--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>데자와 공장</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" property="og:title" content="데자와 공장">
-  <meta name="images" property="og:image" content="dejava.jpg">
+  <meta name="images" property="og:image" content="./dejava.jpg">
   <meta name="description" property="og:description" content="상록수의 웹프로그래밍 실습 사이트">
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
