--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ol>
   </div>
     <div id="article">
-      <p><strong>오른쪽 아래의 초록색 버튼을 누르시면 채팅이 가능합니다</strong></p>
+      <p><strong>본 페이지는 상추록(송X록)의 웹프로그래밍 실습용 페이지입니다. 이용에 착오가 없으시길 바랍니다.</strong></p>
       <h2>상록수(Evergreen Tree)</h2>
       <img src="300px-448_Sangnoksu_Sign.jpg" width=30%>
       <p>낙엽수와 달리, 계절에 상관없이 늘 잎이 푸른 것을 의미한다. 간혹가다 오해하는 도시 사람들도 있는데, 낙엽이 안생기는게 아니라 상시 수명이 다한 잎을 떨구고 새로운 잎을 만들어내는 거다. 그리고 상록수도 계절에 따라 잎사귀를 한꺼번에 많이 털갈이 하는 종들이 있다.</p>
