design revmap... ana jukneunjul aratne!

--- a/2.html
+++ b/2.html
@@ -2,53 +2,71 @@
 <html>
 
 <head>
-  <title>송상록의 음식취향</title>
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+    <title>송상록의 음식취향</title>
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" property="og:title" content="데자와 공장 - 송상록의 음식취향">
+    <meta name="images" property="og:image" content="http://down.humoruniv.org/hwiparambbs/data/pdswait/a_2120875743_915617d88a5cf9d8ea497da56bd0d4dea0415eff.jpg">
+    <meta name="description" property="og:description" content="상록수의 웹프로그래밍 실습 사이트">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
-  <h1>데자와 공장</h1>
-  <div id='grid'>
-  <div id="left">
-    <br>
-    <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);" style="width:150px;"><br>
-    <ol>
-      <li><a href="index.html">메인 페이지</a></li>
-      <li><a href="1.html">송상록개론</a></li>
-      <li><a href="2.html">송상록의 음식취향</a></li>
-      <li><a href="3.html">대왕판다</a></li>
-      <li><a href="4.html">HTML</a></li>
-    </ol>
-  </div>
-  <div id='article'>
-  <h2>송상록의 음식취향</h2>
-    <table>
-      <tr>
-        <td>메뉴</td>
-        <td>가격</td>
-        <td>맛</td>
-      </tr>
-      <tr>
-        <td>만두라면</td>
-        <td>3,500원</td>
-        <td>맛있음</td>
-      </tr>
-      <tr>
-        <td>민트초코</td>
-        <td>-349,3493원</td>
-        <td>맛없음</td>
-      </tr>
-      <tr>
-        <td><a href="https://www.youtube.com/watch?v=ON2o-ZFPj8w" title="옥메와까옥메와까" target="_blank">옥메와까</a></td>
-        <td>7,000원</td>
-        <td>어중간</td>
-      </tr>
-    </table>
-    <p><iframe width="448" height="252" src="https://www.youtube-nocookie.com/embed/LM-2rWUOhDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-    </div>
-    </div>
-<p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
-</body>
-</html>
+    <section id="title">
+        <h1>데자와 공장</h1>
+    </section>
+    <section id="wrap">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">메인 페이지</a></li>
+                    <li><a href="1.html">송상록개론</a></li>
+                    <li><a href="2.html">송상록의 음식취향</a></li>
+                    <li><a href="3.html">대왕판다</a></li>
+                    <li><a href="4.html">HTML</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section id="container">
+            <article>
+                <h2>송상록의 음식취향</h2>
+                <table>
+                    <tr>
+                        <td>메뉴</td>
+                        <td>가격</td>
+                        <td>맛</td>
+                    </tr>
+                    <tr>
+                        <td>만두라면</td>
+                        <td>3,500원</td>
+                        <td>맛있음</td>
+                    </tr>
+                    <tr>
+                        <td>민트초코</td>
+                        <td>-349,3493원</td>
+                        <td>맛없음</td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://www.youtube.com/watch?v=ON2o-ZFPj8w" title="옥메와까옥메와까" target="_blank">옥메와까</a></td>
+                        <td>7,000원</td>
+                        <td>어중간</td>
+                    </tr>
+                </table>
+                <p><iframe width="320" height="180" src="https://www.youtube-nocookie.com/embed/LM-2rWUOhDA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            </article>
+        </section>
+              <footer>
+            <nav>
+                <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);">
+                <ul>
+                    <li><a href="https://www.instagram.com/sangchu._.r0k/" class="instar" title="인스타그램으로 이동">Instagram</a></li>
+                    <li><a href="https://www.facebook.com/sangchu.r0k" class="face" title="페이스북으로 이동">Facebook</a>
+                    </li>
+                </ul>
+            </nav>
+            <p>제작장소: 서울특별시 관악구 대학동 (신림동) 內 어딘가</p>
+            <p>본 페이지는 상추록의 웹프로그래밍 실습용 페이지입니다.</p>
+        </footer>
+    </section>
+</body></html>
