--- a/1.html
+++ b/1.html
@@ -3,52 +3,34 @@
 
 <head>
   <title>송상록개론</title>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" property="og:title" content="데자와 공장 - 송상록개론">
-    <meta name="images" property="og:image" content="http://down.humoruniv.org/hwiparambbs/data/pdswait/a_2120875743_915617d88a5cf9d8ea497da56bd0d4dea0415eff.jpg">
-    <meta name="description" property="og:description" content="상록수의 웹프로그래밍 실습 사이트">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
- <section id="title">
   <h1>데자와 공장</h1>
-  </section>
-  <section id="wrap">
-  <header>
-    <nav>
-  <ul>
+  <div id="grid">
+  <div id="left">
+  <br>
+  <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);" style="width:150px;"><br>
+  <ol>
     <li><a href="index.html">메인 페이지</a></li>
     <li><a href="1.html">송상록개론</a></li>
     <li><a href="2.html">송상록의 음식취향</a></li>
     <li><a href="3.html">대왕판다</a></li>
     <li><a href="4.html">HTML</a></li>
-  </ul>
-  </nav>
-      </header>
-<section id="container">
-  <article>
+  </ol>
+  </div>
+  <div id="article">
   <h2>송상록개론</h2>
   <p>
     상록이는 사실 이 험난한 세상 속 <strong>떠오르는 영웅</strong>, 즉 히어로라고 말할 수 있다. 화를 절대로 내지 않고, 천사답게 술을 마셔도 이슬로 소화시키는 그의 독보적인 영웅력은 기이하다고 말할 수 밖에 없다.</p><p>하지만 상록이가 영웅이라는 사실은 <strong>비밀</strong>이기 때문에 함부로 말해서는 안 된다. 물론 천사는 삐지지 않는다는 점을 이용해서 함부로 이를 누출하는 사례도 몇 번 발생하긴 했다. 하지만 뭐 어쩔 수 없다. 히어로를 좋아하는 상록이답게 야구 팀도 <strong><a href="http://www.heroesbaseball.co.kr/" target="_blank" title="키움 히어로즈 홈페이지">키움 히어로즈</a></strong>를 상당히 좋아하는 것으로 추정된다.
-   </p> 
-   <p>더 자세히 알고 싶다면 <a href="https://www.instagram.com/baechu._.r0k/" target="_blank" title="송상록 인스타그램 '상추록'">상록이의 인스타그램</a>을 확인하자.</p>
-  </article>
-  </section>
-<footer>
-            <nav>
-                <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);">
-                <ul>
-                    <li><a href="https://www.instagram.com/sangchu._.r0k/" class="instar" title="인스타그램으로 이동">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/sangchu.r0k" class="face" title="페이스북으로 이동">Facebook</a>
-                    </li>
-                </ul>
-            </nav>
-            <p>제작장소: 서울특별시 관악구 대학동 (신림동) 內 어딘가</p>
-            <p>본 페이지는 상추록의 웹프로그래밍 실습용 페이지입니다.</p>
-        </footer>
-    </section>
+    </p>
+  <h3>이렇게 <strong>주옥</strong>같은 말을 하는 상록이가 대단하지 아니한가.<br>더 자세히 알고 싶다면 <a href="https://www.instagram.com/baechu._.r0k/" target="_blank" title="송상록 인스타그램 '상추록'">상록이의 인스타그램</a>으로 놀러오세요!</h3>
+  </div>
+  </div>
+<p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
 </body>
 </html>
