--- a/3.html
+++ b/3.html
@@ -2,56 +2,38 @@
 <html>
 
 <head>
-    <title>대왕판다</title>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" property="og:title" content="데자와 공장 - 대왕판다">
-    <meta name="images" property="og:image" content="http://down.humoruniv.org/hwiparambbs/data/pdswait/a_2120875743_915617d88a5cf9d8ea497da56bd0d4dea0415eff.jpg">
-    <meta name="description" property="og:description" content="상록수의 웹프로그래밍 실습 사이트">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+  <title>대왕판다</title>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </head>
-
 <body>
-    <section id="title">
-        <h1>데자와 공장</h1>
-    </section>
-    <section id="wrap">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">메인 페이지</a></li>
-                    <li><a href="1.html">송상록개론</a></li>
-                    <li><a href="2.html">송상록의 음식취향</a></li>
-                    <li><a href="3.html">대왕판다</a></li>
-                    <li><a href="4.html">HTML</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section id="container">
-            <article>
-                <h2>대왕판다</h2>
-                <strong>귀여워....</strong>
-                <p>
-                    너무 귀여워요 판다ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ판다처럼 게으르게 살고싶어요... 다만 상록이가 제일 좋아하는 동물은 대왕판다는 아니다. 꿀벌을 제일 좋아한다. 입는 옷도 다 꿀벌 같다.
-                </p>
-                <p>
-                    <strong>귀여운 판다 동영상을 보고 싶으시면, 아래 사진을 눌러 주세요!</strong>
-                </p>
-                <a href="https://www.youtube.com/watch?v=unKI78hW6LI" title="귀여운 판다 동영상 보러가기" target="_blank"><img src="panda.jpg" width="30%"></a>
-            </article>
-        </section>
-        <footer>
-            <nav>
-                <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);">
-                <ul>
-                    <li><a href="https://www.instagram.com/sangchu._.r0k/" class="instar" title="인스타그램으로 이동">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/sangchu.r0k" class="face" title="페이스북으로 이동">Facebook</a>
-                    </li>
-                </ul>
-            </nav>
-            <p>제작장소: 서울특별시 관악구 대학동 (신림동) 內 어딘가</p>
-            <p>본 페이지는 상추록의 웹프로그래밍 실습용 페이지입니다.</p>
-        </footer>
-    </section>
-</body></html>
+  <h1>데자와 공장</h1>
+  <div id='grid'>
+  <div id="left">
+    <br>
+    <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);" style="width:150px;"><br>
+    <ol>
+      <li><a href="index.html">메인 페이지</a></li>
+      <li><a href="1.html">송상록개론</a></li>
+      <li><a href="2.html">송상록의 음식취향</a></li>
+      <li><a href="3.html">대왕판다</a></li>
+      <li><a href="4.html">HTML</a></li>
+    </ol>
+  </div>
+  <div id='article'>
+  <h2>대왕판다</h2>
+  <h3>귀여워....</h3>
+  <p>
+    너무 귀여워요 판다ㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠㅠ판다처럼 게으르게 살고싶어요... 다만 상록이가 제일 좋아하는 동물은 대왕판다는 아니다. 꿀벌을 제일 좋아한다. 입는 옷도 다 꿀벌 같다.
+  </p>
+  <p>
+    <strong>귀여운 판다 동영상을 보고 싶으시면, 아래 사진을 눌러 주세요!</strong>
+  </p>
+  <a href="https://www.youtube.com/watch?v=unKI78hW6LI" title="귀여운 판다 동영상 보러가기" target="_blank"><img src="panda.jpg" width="30%"></a>
+    </div>
+    </div>
+  <p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
+</body>
+</html>
