--- a/4.html
+++ b/4.html
@@ -4,49 +4,32 @@
 <head>
   <title>HTML</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" property="og:title" content="데자와 공장 - HTML">
-    <meta name="images" property="og:image" content="http://down.humoruniv.org/hwiparambbs/data/pdswait/a_2120875743_915617d88a5cf9d8ea497da56bd0d4dea0415eff.jpg">
-    <meta name="description" property="og:description" content="상록수의 웹프로그래밍 실습 사이트">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
- <section id="title">
   <h1>데자와 공장</h1>
-    </section>
-  <section id="wrap">
-  <header>
-    <nav>
-    <ul>
+  <div id="grid">
+  <div id="left">
+    <br>
+    <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);" style="width:150px;"><br>
+    <ol>
       <li><a href="index.html">메인 페이지</a></li>
       <li><a href="1.html">송상록개론</a></li>
       <li><a href="2.html">송상록의 음식취향</a></li>
       <li><a href="3.html">대왕판다</a></li>
       <li><a href="4.html">HTML</a></li>
-    </ul>
-  </nav>
-      </header>
-  <section id="container">
-  <article>
+    </ol>
+  </div>
+  <div id="article">
   <h2>HTML</h2>
   <p>
-      Hypertext Markup Language (HTML) is the standard markup language for <strong>creating web pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p><p>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
-    </article>
-  </section>
-   <footer>
-            <nav>
-                <input type="button" value="야간 모드로 전환" onclick="nightDayHandler(this);">
-                <ul>
-                    <li><a href="https://www.instagram.com/sangchu._.r0k/" class="instar" title="인스타그램으로 이동">Instagram</a></li>
-                    <li><a href="https://www.facebook.com/sangchu.r0k" class="face" title="페이스북으로 이동">Facebook</a>
-                    </li>
-                </ul>
-            </nav>
-            <p>제작장소: 서울특별시 관악구 대학동 (신림동) 內 어딘가</p>
-            <p>본 페이지는 상추록의 웹프로그래밍 실습용 페이지입니다.</p>
-        </footer>
-    </section>
+    Hypertext Markup Language (HTML) is the standard markup language for <strong>creating web pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p><p>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
+    </p>
+  </div>
+  </div>
+<p style='font-size: 13px;'>이 제작물은 아모레퍼시픽의 아리따글꼴을 사용하여 디자인 되었습니다.</p>
 </body>
 </html>
